tests/rosetta/out/C/24-game-solve.error
cc: exit status 1
/tmp/24-game-solve.c: In function ‘newNum’:
/tmp/24-game-solve.c:179:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  179 |   return (tmp_item_t){.op = OP_NUM,
      |          ^
/tmp/24-game-solve.c: In function ‘exprEval’:
/tmp/24-game-solve.c:184:14: error: array subscript is not an integer
  184 |   if ((x.data["op"] == OP_NUM)) {
      |              ^
/tmp/24-game-solve.c:185:18: error: array subscript is not an integer
  185 |     return x.data["value"];
      |                  ^
/tmp/24-game-solve.c:187:34: error: array subscript is not an integer
  187 |   __auto_type l = exprEval(x.data["left"]);
      |                                  ^
/tmp/24-game-solve.c:188:34: error: array subscript is not an integer
  188 |   __auto_type r = exprEval(x.data["right"]);
      |                                  ^
/tmp/24-game-solve.c:189:14: error: array subscript is not an integer
  189 |   if ((x.data["op"] == OP_ADD)) {
      |              ^
/tmp/24-game-solve.c:193:28: error: ‘l’ undeclared (first use in this function)
  193 |         map_string_int_get(l, "num") * map_string_int_get(r, "denom") +
      |                            ^
/tmp/24-game-solve.c:193:28: note: each undeclared identifier is reported only once for each function it appears in
/tmp/24-game-solve.c:193:59: error: ‘r’ undeclared (first use in this function)
  193 |         map_string_int_get(l, "num") * map_string_int_get(r, "denom") +
      |                                                           ^
/tmp/24-game-solve.c:200:14: error: array subscript is not an integer
  200 |   if ((x.data["op"] == OP_SUB)) {
      |              ^
/tmp/24-game-solve.c:211:14: error: array subscript is not an integer
  211 |   if ((x.data["op"] == OP_MUL)) {
      |              ^
/tmp/24-game-solve.c: In function ‘exprString’:
/tmp/24-game-solve.c:232:14: error: array subscript is not an integer
  232 |   if ((x.data["op"] == OP_NUM)) {
      |              ^
/tmp/24-game-solve.c:233:29: error: array subscript is not an integer
  233 |     char *tmp5 = _str(x.data["value"].data["num"]);
      |                             ^
/tmp/24-game-solve.c:236:37: error: array subscript is not an integer
  236 |   __auto_type ls = exprString(x.data["left"]);
      |                                     ^
/tmp/24-game-solve.c:237:37: error: array subscript is not an integer
  237 |   __auto_type rs = exprString(x.data["right"]);
      |                                     ^
/tmp/24-game-solve.c:239:14: error: array subscript is not an integer
  239 |   if ((x.data["op"] == OP_ADD)) {
      |              ^
/tmp/24-game-solve.c:241:21: error: array subscript is not an integer
  241 |   } else if ((x.data["op"] == OP_SUB)) {
      |                     ^
/tmp/24-game-solve.c:243:21: error: array subscript is not an integer
  243 |   } else if ((x.data["op"] == OP_MUL)) {
      |                     ^
/tmp/24-game-solve.c:248:35: error: ‘ls’ undeclared (first use in this function)
  248 |   char *tmp6 = concat_string("(", ls);
      |                                   ^~
/tmp/24-game-solve.c:250:36: error: ‘rs’ undeclared (first use in this function)
  250 |   char *tmp8 = concat_string(tmp7, rs);
      |                                    ^~
/tmp/24-game-solve.c: In function ‘solve’:
/tmp/24-game-solve.c:256:9: error: request for member ‘len’ in something not a structure or union
  256 |   if (xs.len == 1) {
      |         ^
/tmp/24-game-solve.c:257:32: error: request for member ‘data’ in something not a structure or union
  257 |     __auto_type f = exprEval(xs.data[0]);
      |                                ^
/tmp/24-game-solve.c:258:28: error: ‘f’ undeclared (first use in this function)
  258 |     if (map_string_int_get(f, "denom") != 0 &&
      |                            ^
/tmp/24-game-solve.c:260:35: error: request for member ‘data’ in something not a structure or union
  260 |       printf("%s\n", exprString(xs.data[0]));
      |                                   ^
/tmp/24-game-solve.c:266:16: error: request for member ‘len’ in something not a structure or union
  266 |   while (i < xs.len) {
      |                ^
/tmp/24-game-solve.c:268:18: error: request for member ‘len’ in something not a structure or union
  268 |     while (j < xs.len) {
      |                  ^
/tmp/24-game-solve.c:271:20: error: request for member ‘len’ in something not a structure or union
  271 |       while (k < xs.len) {
      |                    ^
/tmp/24-game-solve.c:275:29: error: request for member ‘data’ in something not a structure or union
  275 |           tmp10.data[0] = xs.data[k];
      |                             ^
/tmp/24-game-solve.c:281:25: error: request for member ‘data’ in something not a structure or union
  281 |       __auto_type a = xs.data[i];
      |                         ^
/tmp/24-game-solve.c:282:25: error: request for member ‘data’ in something not a structure or union
  282 |       __auto_type b = xs.data[j];
      |                         ^
/tmp/24-game-solve.c:290:60: error: ‘a’ undeclared (first use in this function)
  290 |         __auto_type node = (node_item_t){.op = op, .left = a, .right = b};
      |                                                            ^
/tmp/24-game-solve.c:290:72: error: ‘b’ undeclared (first use in this function)
  290 |         __auto_type node = (node_item_t){.op = op, .left = a, .right = b};
      |                                                                        ^
/tmp/24-game-solve.c:293:25: error: ‘node’ undeclared (first use in this function)
  293 |         tmp14.data[0] = node;
      |                         ^~~~
/tmp/24-game-solve.c:295:19: error: incompatible type for argument 1 of ‘solve’
  295 |         if (solve(tmp15)) {
      |                   ^~~~~
      |                   |
      |                   list_int
/tmp/24-game-solve.c:255:15: note: expected ‘int’ but argument is of type ‘list_int’
  255 | int solve(int xs) {
      |           ~~~~^~
/tmp/24-game-solve.c:304:17: error: incompatible type for argument 1 of ‘solve’
  304 |       if (solve(tmp17)) {
      |                 ^~~~~
      |                 |
      |                 list_int
/tmp/24-game-solve.c:255:15: note: expected ‘int’ but argument is of type ‘list_int’
  255 | int solve(int xs) {
      |           ~~~~^~
/tmp/24-game-solve.c:307:42: error: ‘tmp_item_t’ has no member named ‘left’
  307 |       node = (tmp_item_t){.op = OP_DIV, .left = b, .right = a};
      |                                          ^~~~
/tmp/24-game-solve.c:307:53: error: ‘tmp_item_t’ has no member named ‘right’
  307 |       node = (tmp_item_t){.op = OP_DIV, .left = b, .right = a};
      |                                                     ^~~~~
/tmp/24-game-solve.c:307:61: warning: excess elements in struct initializer
  307 |       node = (tmp_item_t){.op = OP_DIV, .left = b, .right = a};
      |                                                             ^
/tmp/24-game-solve.c:307:61: note: (near initialization for ‘(anonymous)’)
/tmp/24-game-solve.c:312:17: error: incompatible type for argument 1 of ‘solve’
  312 |       if (solve(tmp19)) {
      |                 ^~~~~
      |                 |
      |                 list_int
/tmp/24-game-solve.c:255:15: note: expected ‘int’ but argument is of type ‘list_int’
  255 | int solve(int xs) {
      |           ~~~~^~
/tmp/24-game-solve.c: In function ‘mochi_main’:
/tmp/24-game-solve.c:340:18: error: incompatible type for argument 1 of ‘solve’
  340 |     if (((!solve(cards)))) {
      |                  ^~~~~
      |                  |
      |                  list_int
/tmp/24-game-solve.c:255:15: note: expected ‘int’ but argument is of type ‘list_int’
  255 | int solve(int xs) {
      |           ~~~~^~
